--- a/style.css
+++ b/style.css
@@ -61,3 +61,8 @@ button{
     5px 5px rgba(0,0,0,.16);
     
 }
+#display-screen{
+    margin-bottom: -21px;
+    height: 45px;
+    font-size: large;
+}
